k8s/commands.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandsservice
  template:
    metadata:
      labels: 
        app: commandsservice
    spec:
      containers:
        - name: commandsservice
          image: commandsservice
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: commands-ip
spec:
  type: ClusterIP
  selector:
    app: commandsservice
  ports:
    - name: commandsservice
      protocol: TCP
      port: 80
      targetPort: 80
