k8s/platforms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformsservice
  template:
    metadata:
      labels: 
        app: platformsservice
    spec:
      containers:
        - name: platformsservice
          image: platformsservice
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: platformsservice-ip
spec:
  type: ClusterIP
  selector:
    app: platformsservice
  ports:
    - name: platformsservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: platformsservice-np
spec:
  type: NodePort
  selector:
    app: platformsservice
  ports:
    - name: platformsservice
      protocol: TCP
      port: 80
      targetPort: 80
