k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend: 
              service:
                name: platforms-ip
                port:
                  number: 80            
          - path: /api/c/platforms
            pathType: Prefix
            backend: 
              service:
                name: commands-ip
                port:
                  number: 80
